--- a/meta.yml
+++ b/meta.yml
@@ -1,4 +1,7 @@
 temp-schema:
+  OSMSchema.xsd:
+    file: OSMSchema.xsd
+    source: https://gist.github.com/simon04/24ac9e9b1d0ce3c6655c1ffb2329ebc7
   osm-wiki-api-v06:
     file: osm-wiki-api-v06.dtd
     source: https://wiki.openstreetmap.org/wiki/API_v0.6/DTD
@@ -16,3 +19,6 @@ testdata:
   C00002:
     file: C00002.xml
     source: https://wiki.openstreetmap.org/wiki/API_v0.6#Capabilities:_GET_.2Fapi.2Fcapabilities
+  C0003:
+    file: C0003.json
+    source: https://wiki.openstreetmap.org/wiki/OSM_JSON
